...
                    if vm.isFetching {
                        ProgressView()
                    }
                }
            }
        }
        .navigationTitle("People")
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                create
            }
            ToolbarItem(placement: .navigationBarLeading) {
                refresh
...
                .font(
                    .system(.headline, design: .rounded)
                    .bold()
                )
        }
        .disabled(vm.isLoading)
        .accessibilityIdentifier("createBtn")
    }
    
    var refresh: some View {
        Button {
            Task {
                await vm.fetchUsers()
...
